<resources>
    <string name="app_name">Monedas</string>
    <string name="home">Home</string>
    <string name="salir">Salir</string>
    <string name="app_monedas">App Monedas</string>
    <string name="open_nav">Open</string>
    <string name="close_nav">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar">Avatar</string>
    <string name="volver">Volver</string>
    <string name="crear">Crear</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="moneda">Moneda</string>
    <string name="pa_s">País</string>
    <string name="material">Material</string>
    <string name="precio">Precio</string>
    <string name="fecha">Fecha</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="eventos">Eventos</string>
    <string name="recuperar_monedas">Recuperar Monedas</string>
</resources>